--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "fs": "^0.0.2",
-    "jsonfile": "^2.2.3"
+    "jsonfile": "^2.2.3",
+    "node-getopt": "^0.2.3"
   },
   "devDependencies": {},
   "scripts": {
